--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ pcap = "1.2.0"
 pico-args = "0.5.0"
 ratatui = "0.24.0"
 regex = "1.10.3"
+rev_buf_reader = "0.3.0"
 serde = { version = "1.0.196", features = ["derive"] }
 sysinfo = "0.30.5"
 tokio = { version = "1.36.0", features = ["full"] }
